--- a/src/main/resources/static/css/warehouse.css
+++ b/src/main/resources/static/css/warehouse.css
@@ -186,3 +186,13 @@ button:hover {
     gap: 16px;
 
 }
+
+.text-danger {
+    margin: 0;
+    font-size: 15px;
+    color: #d9534f;
+}
+
+p {
+    font-size: 15px;
+}
