--- a/src/main/resources/templates/admin-warehouses.html
+++ b/src/main/resources/templates/admin-warehouses.html
@@ -27,7 +27,9 @@
           th:method="post"
           th:object="${create}">
         <h4>Создание склада</h4>
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger">Error message</p>
         <input class="default-input" type="text" th:field="*{name}" placeholder="Название склада">
+        <p th:if="${#fields.hasErrors('location')}" th:errors="*{location}" class="text-danger">Error message</p>
         <input class="default-input" type="text" th:field="*{location}" placeholder="Локация">
         <button type="submit">Создать</button>
     </form>
@@ -83,10 +85,15 @@
                 <a th:href="@{/warehouses/{warehouseId}/manage(
                             returnDeleted=${form.returnDeleted},
                             warehouseId=${warehouse.id},
-                            pages.size=10)}">Редактировать</a>
+                            pages.size=10)}">Управлять</a>
                 <a th:href="@{/warehouses/{warehouseId}/delete(
                             warehouseId=${warehouse.id}
                             )}" onclick="return confirm('Вы уверены, что хотите удалить склад?');">Удалить</a>
+                <a th:href="@{/warehouses/edit(
+                            warehouseId=${warehouse.id},
+                            name=${warehouse.name},
+                            location=${warehouse.location}
+                            )}">Изменить</a>
             </div>
         </div>
     </div>
