--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,10 +19,10 @@
             <a th:href="@{/orders/admin/manage-purchase}">Заказы пользователей</a>
         </li>
         <li sec:authorize="hasRole('ADMIN')">
-            <a th:href="@{/cart/admin}">Корзина <span th:text="4"></span></a>
+            <a th:href="@{/cart/admin}">Корзина</a><!--span-->
         </li>
         <li sec:authorize="hasRole('USER')">
-            <a th:href="@{/cart/user}">Корзина <span th:text="4"></span></a>
+            <a th:href="@{/cart/user}">Корзина</a><!--span-->
         </li>
         <li>
             <th:block sec:authentication="name"></th:block>
