--- a/src/main/resources/templates/admin-categories.html
+++ b/src/main/resources/templates/admin-categories.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Админ категории</title>
-    <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/catalog.css}">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <header>
@@ -14,13 +15,13 @@
 <aside>
     <ul>
         <li>
-            <a th:href="@{/home/admin/warehouses(returnDeleted=${form.returnDeleted})}">Все склады</a>
+            <a th:href="@{/warehouses(returnDeleted=${form.returnDeleted})}">Все склады</a>
         </li>
         <li>
-            <a th:href="@{/home/admin(returnDeleted=${form.returnDeleted})}">Каталог товаров</a>
+            <a th:href="@{/catalog/admin/products(returnDeleted=${form.returnDeleted})}">Каталог товаров</a>
         </li>
         <li>
-            <a class="active-button" th:href="@{/home/admin/categories(returnDeleted=${form.returnDeleted})}">Категории</a>
+            <a class="active-button" th:href="@{/catalog/admin/categories(returnDeleted=${form.returnDeleted})}">Категории</a>
         </li>
     </ul>
     <form class="standard-form" th:action="@{/catalog/categories/create}"
@@ -35,7 +36,7 @@
     </form>
 </aside>
 <main>
-    <form th:action="@{/home/admin/categories}"
+    <form th:action="@{/catalog/admin/categories}"
           th:method="get"
           th:object="${form}">
         <div class="search">
@@ -58,7 +59,7 @@
                     th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
                     th:classappend="${pageNumber == form.pages.page()} ? 'active'">
                 <a class="page-picker"
-                   th:href="@{/home/admin/categories(
+                   th:href="@{/catalog/admin/categories(
                              returnDeleted=${form.returnDeleted},
                              pages.page=${pageNumber},
                              pages.size=${form.pages.size()},
@@ -77,14 +78,15 @@
         <div class="card" th:each="category : ${model.categories()}">
             <div style="display: flex">
                 <h2 th:text="'Название: ' + ${category.name()}">Название Категории</h2>
-                <img th:if="${category.isDeleted()}" src="/css/icon/trash-can_115312.png" alt="Удалена"/>
+                <img th:if="${category.isDeleted()}" src="/icon/trash-can_115312.png" alt="Удалена"/>
             </div>
             <h4 th:text="'Скидка по категории: ' + ${category.discount()} + '%'">Скидка по категории</h4>
-            <form class="search" th:action="@{/catalog/categories/{categoryId}/edit(categoryId=${category.id()})}"
+            <form class="search" th:action="@{/catalog/categories/edit}"
                   th:method="post"
                   th:object="${edit}">
                 <input class="small-input" type="number" min="0" max="100" th:field="*{discount}" placeholder="Скидка">
                 <input type="hidden" th:field="*{categoryId}" />
+                <input type="hidden" th:field="*{name}" />
                 <button type="submit">Применить</button>
             </form>
             <div class="categories-buttons">
