--- a/src/main/resources/templates/admin-products.html
+++ b/src/main/resources/templates/admin-products.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Админ продукты</title>
-    <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/catalog.css}">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <header>
@@ -14,13 +15,13 @@
 <aside>
     <ul>
         <li>
-            <a th:href="@{/home/admin/warehouses(returnDeleted=${form.returnDeleted})}">Все склады</a>
+            <a th:href="@{/warehouses(returnDeleted=${form.returnDeleted})}">Все склады</a>
         </li>
         <li>
-            <a class="active-button" th:href="@{/home/admin(returnDeleted=${form.returnDeleted})}">Каталог товаров</a>
+            <a class="active-button" th:href="@{/catalog/admin/products(returnDeleted=${form.returnDeleted})}">Каталог товаров</a>
         </li>
         <li>
-            <a th:href="@{/home/admin/categories(returnDeleted=${form.returnDeleted})}">Категории</a>
+            <a th:href="@{/catalog/admin/categories(returnDeleted=${form.returnDeleted})}">Категории</a>
         </li>
     </ul>
     <form class="standard-form" th:action="@{/catalog/products/create}"
@@ -39,7 +40,7 @@
     </form>
 </aside>
 <main>
-    <form th:action="@{/home/admin}"
+    <form th:action="@{/catalog/admin/products}"
           th:method="get"
           th:object="${form}">
         <div class="search">
@@ -82,7 +83,7 @@
                     th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
                     th:classappend="${pageNumber == form.pages.page()} ? 'active'">
                 <a class="page-picker"
-                   th:href="@{/home/admin(
+                   th:href="@{/catalog/admin/products(
                          category=${form.category()},
                          returnDeleted=${form.returnDeleted},
                          priceSort=${form.priceSort()},
@@ -103,7 +104,7 @@
         <div class="card" th:each="product : ${model.products()}">
             <div style="display: flex">
                 <h2 th:text="'Название: ' + ${product.name()}">Название Товара</h2>
-                <img th:if="${product.isDeleted()}" src="/css/icon/trash-can_115312.png" alt="Удален"/>
+                <img th:if="${product.isDeleted()}" src="/icon/trash-can_115312.png" alt="Удален"/>
             </div>
             <h4 th:text="'Категория: ' + ${product.category()}">Категория</h4>
             <h4 class="decorated-text" th:if="${product.price() != product.oldPrice()}"
