--- a/src/main/resources/templates/purchase-manage.html
+++ b/src/main/resources/templates/purchase-manage.html
@@ -5,6 +5,7 @@
     <title>Заказы пользователей</title>
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <link rel="stylesheet" th:href="@{/css/orders.css}">
+    <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <header>
