--- a/src/main/resources/templates/warehouse-edit.html
+++ b/src/main/resources/templates/warehouse-edit.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Админ редактирование склада</title>
-    <link rel="stylesheet" th:href="@{/css/home.css}">
+    <link rel="stylesheet" th:href="@{/css/catalog.css}">
     <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="icon" href="/icon/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <header>
